# discrete-wm

./: .gitignore  README.md  comparison.md  instructions.md  launch_agent.sh  launch_research.sh  pyproject.toml  research_log.md  results.md
discrete_wm/: collect_data.py  collect_data_v2.py  evaluate.py  evaluate_ablation.py  hf_utils.py  interactive_play.ipynb  make_plots.py  play_interactive.py  train_diamond_standalone.py  train_idm.py  train_tokenizer.py  train_world_model.py  utils.py
discrete_wm/models/: discrete_diffusion.py
figures/ablation_v1/: comparison.json
figures/eval_100k/: eval_results.json
figures/eval_200k/: eval_results.json
figures/eval_20k/: eval_results.json
