[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.4.1",
    "numpy==1.26.0",
    "torcheval==0.0.7",
    "hydra-core==1.3",
    "omegaconf",
    "gymnasium==0.29.1",
    "ale-py==0.9.0",
    "pygame==2.5.2",
    "opencv-python==4.10.0.84",
    "pillow==10.3.0",
    "h5py==3.11.0",
    "imageio",
    "matplotlib",
    "tqdm==4.66.4",
    "wandb==0.17.0",
    "huggingface-hub==0.17.2",
    "einops",
    "ipywidgets>=8.1.8",
]
